Changelog
=========

2.0a4 - Unreleased
------------------

2.0a3 - 2011-01-10
------------------

* Change the permission for the grouped listing view so that anonymous
  visitors can access the view when the content is published.
  Thanks to Larry Pitcher for the report.
  [rossp] 

* Add support for columns that don't have corresponding catalog
  metadata.  Be aware that using such columns can greatly affect
  performance as export requires looking up every object to retrieve
  the data.
  [rossp]

2.0a2 - 2010-11-23
------------------

* Fixed a problem with a faulty type assumption regarding
  DateTimeFields in the FormDateCriterion.  The FormDateCriterion
  doesn't actually used a DateTimeField.
  [rossp]

* Refactor the <form> and <button> based batch_macros so as to not
  conflict with other uses of the full "navigation" macro within an
  existing form resulting in nested <form>s.
  [rossp]

2.0a1 - 2010-11-21
------------------

* Ensure that the "default" profile is used by portal_quickinstaller
  by... well, default.  :-)
  [rossp]

* Use a <form> and <button> elements in the navigation/paging
  batch_macros to prevent "uri too long" errors when using paging with
  many form criteria.
  [rossp]

* Use method="post" for the criteria form to address "uri too long"
  when lots of form criteria are used.  Reported by mauro and
  confirmed to happen with just two date fields.
  [rossp]

* Added defines for Plone4 complatibility in folder_listing
  skin template.
  [seletz]

* Fix navigation_recurse template to match current Plone 4 version.
  [seletz] [ramonski]

* Add a collection listing portlet that makes use of the
  folder_listing macros for a richer portlet. [rossp]

* fix issue producing 
  AttributeError: 'NoneType' object has no attribute 'title_or_id'
  when adding path criterions.
  [hplocher]

* Fix '<input type="hidden" name="sort_on"...', now uses the default
  sort criteria if present
